# crude_cache

./: Cargo.toml  README.md
src/: crude_cache.rs  lib.rs  sharded_map.rs
tests/: cache_test.rs
