[package]
name = "crude_cache"
description = "A simple utility for good enough concurrent caching needs."
version = "0.1.0"
edition = "2021"
authors = ["Jeremias"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }

[dev-dependencies]
timeit = "0.1.2"
futures = "0.3.28"

